--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,54 @@
     animation: slide-fade-out 0.3s ease-in forwards;
   }
 }
+
+input {
+  border-color: transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+ 
+}
+.btn {
+  background:rgb(69, 130, 69);
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  border-color: transparent;
+  border-radius: 5px;
+  text-transform: capitalize;
+  color:white;
+  cursor: pointer;
+}
+input.error {
+  border: 2px solid var(--clr-red-dark);
+}
+.colors {
+  min-height: calc(100vh - 100px);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(223.33px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(96px, 1fr));
+}
+.color {
+  padding: 1rem 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  text-transform: none;
+}
+.percent-value {
+  margin-bottom: 0;
+  color: var(--clr-grey-1);
+}
+.color-value {
+  color: var(--clr-grey-1);
+  margin-bottom: 0;
+}
+.color-light .color-value {
+  color:white;
+}
+.color-light .percent-value {
+  color:white;
+}
+.alert {
+  text-transform: uppercase;
+  font-size: 0.85rem;
+  margin-top: 0.5rem;
+}
